Daataforoprettelse er nu usynlig for brugeren når de opretter, den er nu lavet automatisk på nuværende dato UTC dd/mm/yyyy

--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
@@ -96,9 +96,9 @@
     </div>
     <br />
     <div>
-        Dato for oprettelse
+
     </div>
-    <div>
+    <div style="display: none;">
         <input type="text" id="DatoForOprettelse" name="DatoForOprettelse" placeholder="DatoForOprettelse" />*
     </div>
     <br />
