--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
@@ -19,10 +19,13 @@
     </style>
 </head>
 <body>
-    <div>
-        <input type="text" placeholder="Søg" />
-        <input type="submit" value="Søg" />
-    </div>
+    @using (Html.BeginForm("TilføjerListe", "Home"))
+    {
+        <div>
+            <input type="text" placeholder="Søg på uddannelse" name="Uddannelse" />
+            <input type="submit" value="Søg" />
+        </div>
+    }
     <table class="table">
         <tr>
             <th>@Html.DisplayNameFor(model => model.Navn)</th>
@@ -39,22 +42,22 @@
         </tr>
         @foreach (var s in Model)
         {
-        <tr>
-            <td>@Html.DisplayFor(models => s.Navn)</td>
-            <td>@Html.DisplayFor(models => s.Adresse)</td>
-            <td>@Html.DisplayFor(models => s.Telefon)</td>
-            <td>@Html.DisplayFor(models => s.Mail)</td>
-            <td>@Html.DisplayFor(models => s.Uddannelse)</td>
-            <td>@Html.DisplayFor(models => s.Erhvervserfaring)</td>
-            <td>@Html.DisplayFor(models => s.JobØnske)</td>
-            <td>@Html.DisplayFor(models => s.FagligeKompetencer)</td>
-            <td>@Html.DisplayFor(models => s.PersonligeKompetencer)</td>
-            <td>@Html.DisplayFor(models => s.GenereltInfo)</td>
-            <td>@Html.DisplayFor(models => s.ØnskerAtFlytte)</td>
+            <tr>
+                <td>@Html.DisplayFor(models => s.Navn)</td>
+                <td>@Html.DisplayFor(models => s.Adresse)</td>
+                <td>@Html.DisplayFor(models => s.Telefon)</td>
+                <td>@Html.DisplayFor(models => s.Mail)</td>
+                <td>@Html.DisplayFor(models => s.Uddannelse)</td>
+                <td>@Html.DisplayFor(models => s.Erhvervserfaring)</td>
+                <td>@Html.DisplayFor(models => s.JobØnske)</td>
+                <td>@Html.DisplayFor(models => s.FagligeKompetencer)</td>
+                <td>@Html.DisplayFor(models => s.PersonligeKompetencer)</td>
+                <td>@Html.DisplayFor(models => s.GenereltInfo)</td>
+                <td>@Html.DisplayFor(models => s.ØnskerAtFlytte)</td>
 
-            <td>@Html.ActionLink("Rediger", "RedigerTilføjer", "Home", new {id = s.Id }, new { @class = "btn btn-primary" })</td>
-            <td>@Html.ActionLink("Slet", "TilføjerDelete", "Home", new {id = s.Id }, new {@class="btn btn-primary" })</td>
-        </tr>
+                <td>@Html.ActionLink("Rediger", "RedigerTilføjer", "Home", new { id = s.Id }, new { @class = "btn btn-primary" })</td>
+                <td>@Html.ActionLink("Slet", "TilføjerDelete", "Home", new { id = s.Id }, new { @class = "btn btn-primary" })</td>
+            </tr>
 
         }
     </table>
