--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
@@ -25,6 +25,7 @@
         <input type="text" placeholder="Søg på uddannelse" name="Uddannelse" />
         <input type="text" placeholder="Søg på Job Ønske" name="JobØnske" />
         <input type="text" placeholder="Søg på Faglige Kompetencer" name="Kompetence" />
+        <input type="checkbox" name="Flytning" />
         <input type="submit" value="Søg" />
     </div>
     }
