--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretTilføjer.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretTilføjer.cshtml
@@ -66,7 +66,7 @@
         </div>
         <br />
         <div>
-            <pre>GenereltInfo*</pre>
+            <pre>GenereltInfo</pre>
         </div>
         <div>
             @Html.TextAreaFor(m => m.GenereltInfo, new { @id = "GenereltInfo", @placeholder = "GenereltInfo" })
