Har rettet OpretStudent View til, så den indeholder en CV punkt

--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
@@ -96,6 +96,11 @@
     </div>
     <br />
     <div>
+        Indsæt CV (PDF ONLY)*
+        @Html.EditorFor(x => x.CV)
+    </div>
+
+    <div>
 
     </div>
     <div style="display: none;">
