Kun pdf filer kan nu uploades til som CV i opretTilføjer

--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
@@ -97,7 +97,7 @@
     <br />
     <div>
         Indsæt CV (PDF ONLY)*
-        <input type="file" name="CV" accept="application/pdf"> />
+        <input type="file" name="CV" accept="application/pdf" />
     </div>
 
     <div>
