--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretTilføjer.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretTilføjer.cshtml
@@ -82,7 +82,7 @@
         <br />
         <div>
             Indsæt CV (PDF ONLY!)*
-            <input type="file" name="CV" />
+            <input type="file" name="CV" accept="application/pdf" />
         </div>
         <div>
             <input type="submit" id="Opret" value="Opret" />
