Baggrund billede indsættet

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -20,6 +20,10 @@
             width: 200px;
             height: 50px;
         }
+        body {
+            background-image: url(https://special-beton.dk/sites/default/files/styles/large/public/field/image/innovest_hl_3.jpg?itok=KIAbzi2c);
+            background-size: cover;
+        }
     </style>
 </head>
 <body>
