--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -21,7 +21,7 @@
             height: 50px;
         }
         body {
-            background-image: url(https://special-beton.dk/sites/default/files/styles/large/public/field/image/innovest_hl_3.jpg?itok=KIAbzi2c);
+            background-image: url(https://www.troldtekt.dk/~/media/Case%20Images/Office%20buildings/Innovest/Troldtekt_Innovest_17%20jpg.jpg);
             background-size: cover;
         }
     </style>
