Rettet småfejl ud fra brugertest

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -41,8 +41,8 @@
             </div>
             <br />
             <div>
-                <input type="button" class="button" value="Opret Tilføjer" onclick="location.href='@Url.Action("OpretTilføjer", "Home")'" />
-                <input type="button" class="button" value="Tilføjer Liste" onclick="location.href='@Url.Action("TilføjerListe", "Home")'" />
+                <input type="button" class="button" value="Opret Tilflytter" onclick="location.href='@Url.Action("OpretTilføjer", "Home")'" />
+                <input type="button" class="button" value="Tilflytter Liste" onclick="location.href='@Url.Action("TilføjerListe", "Home")'" />
             </div>
             <br />
             <div>
