--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerTilføjer.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerTilføjer.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>RedigerTilføjer</title>
+    <title>RedigerTilflytter</title>
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
 </head>
 <body>
