--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerOprettet.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerOprettet.cshtml
@@ -8,13 +8,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>TilføjerOprettet</title>
+    <title>TilflytterOprettet</title>
 </head>
 <body>
-    <h1>En Tilføjer er blevet oprettet</h1>
+    <h1>En Tilflytter er blevet oprettet</h1>
 
-    <div>
-        <input type="button" value="Tilbage til forside" onclick="location.href='@Url.Action("Forside", "Home")'" />
-    </div>
+
 </body>
 </html>
