--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerRedigeret.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerRedigeret.cshtml
@@ -8,10 +8,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>VirksomhedRedigeret</title>
+    <title>TilflytterRedigeret</title>
 </head>
 <body>
-    <h1>Tilføjer er blevet redigeret</h1>
+    <h1>Tilflytter er blevet redigeret</h1>
     <div>
         <input type="button" value="Tilbage til forside" onclick="location.href='@Url.Action("Forside", "Home")'" />
     </div>
