--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>TilføjerListe</title>
+    <title>TilflytterListe</title>
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
     <style>
         .divider {
@@ -27,6 +27,7 @@
         <input type="text" placeholder="Søg på Faglige Kompetencer" name="Kompetence" />
         <input type="text" placeholder="Søg på 1 for tilflyttere" name="Flytning" />
         <input type="submit" value="Søg" />
+        <input type="reset" value="Ryd Felter" />
     </div>
     }
     <table class="table">
