--- a/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
@@ -28,7 +28,7 @@
             <input type="text" placeholder="Søg på Profiler" name="Profiler" />
             <input type="text" placeholder="Søg på Styrkeposition" name="Position" />
             <input type="submit" value="Søg" />
-            <input type="reset" value="Slet" />
+            <input type="reset" value="Ryd Felter" />
         }
         </div>
    
