--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerStudent.cshtml
@@ -56,10 +56,16 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.SprogKundskab, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Modersmål, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SprogKundskab, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SprogKundskab, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Modersmål, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Modersmål, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Fremmedsprog, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Fremmedsprog, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
         <div class="form-group">
@@ -156,8 +162,8 @@
         <br />
         <div class="form-group">
             <div class="col-md-10">
-            <input type="submit" id="Rediger" value="Rediger" class="btn btn-primary" />
-                </div>
+                <input type="submit" id="Rediger" value="Rediger" class="btn btn-primary" />
+            </div>
         </div>
     </div>
     }
