--- a/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
@@ -35,8 +35,8 @@
     <table class="table">
         <tr>
             <th>@Html.DisplayNameFor(model => model.Navn)</th>
-            <th>@Html.DisplayNameFor(model => model.Adresse)</th>
-            <th>@Html.DisplayNameFor(model => model.Bopæl)</th>
+            <th>@Html.DisplayNameFor(model => model.Vej)</th>
+            <th>@Html.DisplayNameFor(model => model.By)</th>
             <th>@Html.DisplayNameFor(model => model.Nationalitet)</th>
             <th>@Html.DisplayNameFor(model => model.Modersmål)</th>
             <th>@Html.DisplayNameFor(model => model.Fremmedsprog)</th>
@@ -63,8 +63,8 @@
         {
         <tr>
             <td>@Html.DisplayFor(modelItem => item.Navn)</td>
-            <td>@Html.DisplayFor(modelItem => item.Adresse)</td>
-            <td>@Html.DisplayFor(modelItem => item.Bopæl)</td>
+            <td>@Html.DisplayFor(modelItem => item.Vej)</td>
+            <td>@Html.DisplayFor(modelItem => item.By)</td>
             <td>@Html.DisplayFor(modelItem => item.Nationalitet)</td>
             <td>@Html.DisplayFor(modelItem => item.Modersmål)</td>
             <td>@Html.DisplayFor(modelItem => item.Fremmedsprog)</td>
