--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerStudent.cshtml
@@ -34,18 +34,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Adresse, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Vej, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Adresse, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Adresse, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Vej, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Vej, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Bopæl, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.By, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Bopæl, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Bopæl, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.By, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.By, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
