Har tilføjet en checkbox til virksomhed omkring aflønning

--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretVirksomhed.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretVirksomhed.cshtml
@@ -65,6 +65,11 @@
 
         </div>
         <br />
+
+        <div>
+            Er villig til at finansere praktikant?*
+            @Html.EditorFor(m => m.Aflønning) Klik på feltet for ja
+        </div>
         <div>
             <input type="submit" id="OpretVirksomhed" value="Opret Virksomhed" />
         </div>
