--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerVirksomhed.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerVirksomhed.cshtml
@@ -90,6 +90,13 @@
                 @Html.ValidationMessageFor(model => model.Styrkeposition, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Aflønning, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Aflønning, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Aflønning, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <br />
         <div class="form-group">
             <div class="col-md-10">
