--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
@@ -33,10 +33,12 @@
     <table class="table">
         <tr>
             <th>@Html.DisplayNameFor(model => model.Navn)</th>
-            <th>@Html.DisplayNameFor(model => model.Adresse)</th>
+            <th>@Html.DisplayNameFor(model => model.Vej)</th>
+            <th>@Html.DisplayNameFor(model => model.By)</th>
             <th>@Html.DisplayNameFor(model => model.Telefon)</th>
             <th>@Html.DisplayNameFor(model => model.Mail)</th>
-            <th>@Html.DisplayNameFor(model => model.Uddannelse)</th>
+            <th>@Html.DisplayNameFor(model => model.PrimærUddannelse)</th>
+            <th>@Html.DisplayNameFor(model => model.SekundærUddannelse)</th>
             <th>@Html.DisplayNameFor(model => model.Erhvervserfaring)</th>
             <th>@Html.DisplayNameFor(model => model.JobØnske)</th>
             <th>@Html.DisplayNameFor(model => model.FagligeKompetencer)</th>
@@ -49,10 +51,12 @@
         {
         <tr>
             <td>@Html.DisplayFor(models => s.Navn)</td>
-            <td>@Html.DisplayFor(models => s.Adresse)</td>
+            <td>@Html.DisplayFor(models => s.Vej)</td>
+            <td>@Html.DisplayFor(models => s.By)</td>
             <td>@Html.DisplayFor(models => s.Telefon)</td>
             <td>@Html.DisplayFor(models => s.Mail)</td>
-            <td>@Html.DisplayFor(models => s.Uddannelse)</td>
+            <td>@Html.DisplayFor(models => s.PrimærUddannelse)</td>
+            <td>@Html.DisplayFor(models => s.SekundærUddannelse)</td>
             <td>@Html.DisplayFor(models => s.Erhvervserfaring)</td>
             <td>@Html.DisplayFor(models => s.JobØnske)</td>
             <td>@Html.DisplayFor(models => s.FagligeKompetencer)</td>
