rediger knappen er nu lavet om så der står opdater i stedet for funktionen er ikke blevet ændret

--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerTilføjer.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerTilføjer.cshtml
@@ -116,7 +116,7 @@
         <br />
         <div class="form-group">
             <div class="col-md-10">
-                <input type="submit" id="Rediger" value="Rediger" />
+                <input type="submit" id="Rediger" value="Opdater" />
             </div>
         </div>
     </div>
