--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerStudent.cshtml
@@ -162,7 +162,7 @@
         <br />
         <div class="form-group">
             <div class="col-md-10">
-                <input type="submit" id="Rediger" value="Rediger" class="btn btn-primary" />
+                <input type="submit" id="Rediger" value="Opdater" class="btn btn-primary" />
             </div>
         </div>
     </div>
