Kan nu søge på Jobønske og sekundær uddanelse på samme tid

--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
@@ -22,7 +22,8 @@
     @using (Html.BeginForm("TilføjerListe", "Home"))
     {
     <div>
-        <input type="text" placeholder="Søg på uddannelse" name="Uddannelse" />
+        <input type="text" placeholder="Søg på Primær uddannelse" name="Uddannelse" />
+        <input type="text" placeholder="Søg på Sekundær Uddannelse" name="SekundærUddannelse" />
         <input type="text" placeholder="Søg på Job Ønske" name="JobØnske" />
         <input type="text" placeholder="Søg på Faglige Kompetencer" name="Kompetence" />
         <input type="text" placeholder="Søg på 1 for tilflyttere" name="Flytning" />
