Har lavet en knap til her liste som henter hele listen

--- a/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
@@ -29,6 +29,7 @@
             <input type="text" placeholder="Søg på Praktik/Hovedopgave/Semester Projekt" size="36" name="Emne" />
             <input type="submit" value="Søg" />
             <input type="reset" value="Ryd felter" />
+            <input type="button" class="button" value="Vis hele listen" onclick="location.href='@Url.Action("StudentListe", "Home")'" />
         }
    
     </div>
