--- a/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
@@ -29,8 +29,9 @@
             <input type="text" placeholder="Søg på Styrkeposition" name="Position" />
             <input type="submit" value="Søg" />
             <input type="reset" value="Ryd Felter" />
+            <input type="button" class="button" value="Vis hele listen" onclick="location.href='@Url.Action("VirksomhedListe", "Home")'" />
         }
-        </div>
+    </div>
    
     <table class="table">
         <tr>
