--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
@@ -29,6 +29,7 @@
         <input type="text" placeholder="Søg på 1 for tilflyttere" name="Flytning" />
         <input type="submit" value="Søg" />
         <input type="reset" value="Ryd Felter" />
+        <input type="button" class="button" value="Vis hele listen" onclick="location.href='@Url.Action("TilføjerListe", "Home")'" />
     </div>
     }
     <table class="table">
