--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerTilføjer.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerTilføjer.cshtml
@@ -105,6 +105,12 @@
                 @Html.EditorFor(model => model.GenereltInfo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.GenereltInfo, "", new { @class = "text-danger" })
             </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.DatoForOprettelse, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.DatoForOprettelse, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.ØnskerAtFlytte, htmlAttributes: new { @class = "control-label col-md-2" })
