Har tilføjet et søgefelt til Navn

--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
@@ -22,6 +22,7 @@
     @using (Html.BeginForm("TilføjerListe", "Home"))
     {
     <div>
+        <input type="text" placeholder="Søg på Navn" name="Navn" />
         <input type="text" placeholder="Søg på Primær uddannelse" name="Uddannelse" />
         <input type="text" placeholder="Søg på Sekundær Uddannelse" name="SekundærUddannelse" />
         <input type="text" placeholder="Søg på Job Ønske" name="JobØnske" />
