--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -20,10 +20,7 @@
             width: 200px;
             height: 50px;
         }
-        body {
-            background-image: url(https://www.troldtekt.dk/~/media/Case%20Images/Office%20buildings/Innovest/Troldtekt_Innovest_17%20jpg.jpg);
-            background-size: cover;
-        }
+    body { background-image: url('../../Images/RedigeretForside.PNG'); background-size: cover; }
     </style>
 </head>
 <body>
